# pytest-execution-timer

./: .editorconfig  .gitignore  .gitpod.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yml
pytest_execution_timer/: plugin.py
tests/: test_pytest_execution_timer.py
